# pylebedev

./: .gitignore  COMPILATION.md  Dockerfile-linux-anaconda  MANIFEST.in  README.md  build_docker_linux_anaconda.sh  build_docker_linux_pypi.sh  build_docker_local.sh  docker_run_pypi.sh  environment.yml  meta.yaml  pyproject.toml  run.py  setup.py  testversion.py  versiontest.py
.github/workflows/: build.yml  build_conda.yml  build_wheels.yml  docs.yml
deploy/: docker_run_anaconda.sh
deploy/dockerfiles/: Dockerfile-linux-pypi
docs/: background.rst  community_guidelines.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst  user_interface.rst
docs/_static/css/: custom.css
docs/_templates/: breadcrumbs.html
docs/scripts/: table.py
pylebedev/: __init__.py  _version.py  pylebedev.py
tests/: test_lebedev_class.py  test_lebedev_quadrature.py
